--- a/index.html
+++ b/index.html
@@ -13,29 +13,41 @@
 <body>
     <div class="boards">
         <div class="board">
-            <h3>Todo</h3>
+            <div class="board-title">
+                <h3>Todo</h3>
+            </div>
             <div class="dropzone">
                 <div class="card" draggable="true" >
                     <div class="status backlog"></div>
-                    <div class="content">Task 1</div>
+                    <div class="content">
+                        <p>Task 1</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="board">
-            <h3>In Progress</h3>
+            <div class="board-title">
+                <h3>In Progress</h3>
+            </div>
             <div class="dropzone">
                 <div class="card" draggable="true" >
                     <div class="status in-progress"></div>
-                    <div class="content">Task 2</div>
+                    <div class="content">
+                        <p>Task 2</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="board">
-            <h3>Done</h3>
+            <div class="board-title">
+                <h3>Done</h3>
+            </div>
             <div class="dropzone">
                 <div class="card" draggable="true" >
                     <div class="status done"></div>
-                    <div class="content">Task 3</div>
+                    <div class="content">
+                        <p>Task 3</p>
+                    </div>
                 </div>
             </div>
         </div>
